--- a/requirements.yml
+++ b/requirements.yml
@@ -1,6 +1,8 @@
 roles:
   - name: geerlingguy.docker
     version: 7.0.1
+  - name: jason_riddle.tailscale
+    version: 1.1.22
 collections:
   - name: https://github.com/kencx/ansible-collection.git
     type: git
